@@ -13,7 +13,7 @@
 // See the file "license" for information on usage and redistribution of
 // this file, and for a DISCLAIMER OF ALL WARRANTIES.
 //
-// $Id: OSystem.cxx,v 1.147 2009-01-14 20:31:07 stephena Exp $
+// $Id: OSystem.cxx,v 1.148 2009-01-16 16:38:06 stephena Exp $
 //============================================================================
 
 #include <cassert>
@@ -270,38 +270,45 @@ bool OSystem::create()
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void OSystem::setConfigPaths()
 {
+  // Paths are saved with special characters preserved ('~' or '.')
+  // Internally, we expand them so the rest of the codebase doesn't
+  // have to worry about it
   FilesystemNode node;
+  string s;
 
-  myStateDir = mySettings->getString("statedir");
-  if(myStateDir == "")
-    myStateDir = myBaseDir + BSPF_PATH_SEPARATOR + "state";
-  node = FilesystemNode(myStateDir);
+  s = mySettings->getString("statedir");
+  if(s == "") s = myBaseDir + BSPF_PATH_SEPARATOR + "state";
+  mySettings->setString("statedir", s);
+  node = FilesystemNode(s);
+  myStateDir = node.getPath();
   if(!node.isDirectory())
     AbstractFilesystemNode::makeDir(myStateDir);
-  mySettings->setString("statedir", myStateDir);
 
-  mySnapshotDir = mySettings->getString("ssdir");
-  if(mySnapshotDir == "")
-    mySnapshotDir = myBaseDir + BSPF_PATH_SEPARATOR + "snapshots";
-  node = FilesystemNode(mySnapshotDir);
+  s = mySettings->getString("ssdir");
+  if(s == "") s = myBaseDir + BSPF_PATH_SEPARATOR + "snapshots";
+  mySettings->setString("ssdir", s);
+  node = FilesystemNode(s);
+  mySnapshotDir = node.getPath();
   if(!node.isDirectory())
     AbstractFilesystemNode::makeDir(mySnapshotDir);
-  mySettings->setString("ssdir", mySnapshotDir);
 
-  myCheatFile = mySettings->getString("cheatfile");
-  if(myCheatFile == "")
-    myCheatFile = myBaseDir + BSPF_PATH_SEPARATOR + "stella.cht";
-  mySettings->setString("cheatfile", myCheatFile);
+  s = mySettings->getString("cheatfile");
+  if(s == "") s = myBaseDir + BSPF_PATH_SEPARATOR + "stella.cht";
+  mySettings->setString("cheatfile", s);
+  node = FilesystemNode(s);
+  myCheatFile = node.getPath();
 
-  myPaletteFile = mySettings->getString("palettefile");
-  if(myPaletteFile == "")
-    myPaletteFile = myBaseDir + BSPF_PATH_SEPARATOR + "stella.pal";
-  mySettings->setString("palettefile", myPaletteFile);
+  s = mySettings->getString("palettefile");
+  if(s == "") s = myBaseDir + BSPF_PATH_SEPARATOR + "stella.pal";
+  mySettings->setString("palettefile", s);
+  node = FilesystemNode(s);
+  myPaletteFile = node.getPath();
 
-  myPropertiesFile = mySettings->getString("propsfile");
-  if(myPropertiesFile == "")
-    myPropertiesFile = myBaseDir + BSPF_PATH_SEPARATOR + "stella.pro";
-  mySettings->setString("propsfile", myPropertiesFile);
+  s = mySettings->getString("propsfile");
+  if(s == "") s = myBaseDir + BSPF_PATH_SEPARATOR + "stella.pro";
+  mySettings->setString("propsfile", s);
+  node = FilesystemNode(s);
+  myPropertiesFile = node.getPath();
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -318,8 +325,16 @@ void OSystem::setBaseDir(const string& basedir)
 {
   myBaseDir = basedir;
   FilesystemNode node(myBaseDir);
+  myBaseDirExpanded = node.getPath();
   if(!node.isDirectory())
-    AbstractFilesystemNode::makeDir(myBaseDir);
+    AbstractFilesystemNode::makeDir(myBaseDirExpanded);
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+void OSystem::setConfigFile(const string& file)
+{
+  FilesystemNode node(file);
+  myConfigFile = node.getPath();
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
